fixed lottie style on mobile screen

--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -157,3 +157,10 @@
         margin-bottom: 1.5rem;
     }
 }
+
+.lottieStyle {
+    @media screen and (max-width: 768px) {
+        width: 300px;
+        margin: 0 auto
+    }
+}
